test/libsolidity/syntaxTests/types/bytes0.sol
contract C {
  bytes0 b0 = 1;
}
// ----
// DeclarationError 7920: (15-21): Identifier not found or not unique.
